add contact page

--- a/src/business.html
+++ b/src/business.html
@@ -128,6 +128,13 @@
           reduce product reprocessing.
         </p>
       </div>
+      <a
+        href="http://unbouncepages.com/openpaycontactuk/"
+        target="_blank"
+        class="btn-primary whyOpenPay-btn"
+      >
+        Get in touch
+      </a>
     </div>
     <div class="whatCanWeDo-wrap block-wap">
       <section class="whatCanWeDo-section whatCanWeDo-section_1">
@@ -244,7 +251,7 @@
           target="_blank"
           class="btn-primary readyToChat-btn"
         >
-          Contact Us
+          Get in touch
         </a>
       </div>
     </div>
@@ -262,10 +269,20 @@
               <a href="/contact" class="paragraphSpec-3">Contact us</a>
             </li>
             <li>
-              <a href="./docs/privacy-policy.pdf" target="_blank" class="paragraphSpec-3">Privacy Policy</a>
+              <a
+                href="./docs/privacy-policy.pdf"
+                target="_blank"
+                class="paragraphSpec-3"
+                >Privacy Policy</a
+              >
             </li>
             <li>
-              <a href="./docs/terms-conditions.pdf" target="_blank" class="paragraphSpec-3">Terms & Conditions</a>
+              <a
+                href="./docs/terms-conditions.pdf"
+                target="_blank"
+                class="paragraphSpec-3"
+                >Terms & Conditions</a
+              >
             </li>
           </ul>
         </nav>
