--- a/src/contact.html
+++ b/src/contact.html
@@ -68,11 +68,7 @@
         g.clearUserCookie = function() {};
       })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:300,600,800"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/business_uk.css" />
+    <link rel="stylesheet" href="./css/contact_uk.css" />
     <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
@@ -87,174 +83,53 @@
           </div>
         </div>
         <nav class="header-nav header-nav_disable">
-          <ul class="nav-list">
-            <!-- <li>
-              <a href="/works" class="paragraph-4">How it works</a>
-            </li> -->
+          <ul class="nav-list"> 
             <li>
-              <a href="/business" class="paragraph-4">I'm a business</a>
+              <a href="/business" class="paragraphSpec-4">I'm a business</a>
             </li>
             <li>
-              <a href="/contact" class="paragraph-4">Contact us</a>
+              <a href="/contact" class="paragraphSpec-4">Contact us</a>
             </li>
           </ul>
-          <!-- <a href="#" class="header__log-in paragraph-4">
-            Merchant log In
-          </a> -->
         </nav>
       </header>
     </div>
-    <div class="introduction-wrap block-wap">
-      <div class="introduction block-child-wrap">
-        <p class="introduction-desc">
-          Open your eyes to a smarter way to pay
-        </p>
+
+    <section class="hero">
+      <div class="block-child-wrap">
+        <h1 class="hero__title">Contact us</h2>
       </div>
-    </div>
-    <div class="whyOpenPay-wrap block-wap">
-      <img src="./images/big-o.svg" alt="bg" class="whyOpenPay-bg" />
-      <div class="whyOpenPay">
-        <h1 class="title-h1 whyOpenPay-title">
-          Why Openpay?
-        </h1>
-        <p class="paragraph-1 whyOpenPay__text">
-          We’re safe, responsible and transparent. Your customers are our
-          customers, and your success is our success.
-        </p>
-        <p class="paragraph-1 whyOpenPay__text">
-          Made by retailers, for retailers, we have over 6000 online and
-          in-store partners across Australia, New Zealand and now the UK. Our
-          proven technology will help you increase sales, drive loyalty and
-          reduce product reprocessing.
-        </p>
+    </section>
+
+    <section class="contact">
+      <div class="contact__wrapper">
+        <h2 class="contact__title">Ways to contact us</h2>
+        <div class="contact__container">
+          <div class="contact__mail">
+            <div class="contact__img-wrapper">
+              <img src="./images/contact/mail.svg" alt="Email Icon" class="contact__img contact__img--mail">
+            </div>
+            <h3 class="contact__subtitle contact__subtitle--mail">Email us</h3>
+            <p class="contact__text">For non-urgent and general help, contact by email. we’ll get back to you promptly.</p>
+            <a href="mailto:sales@openpay.co.uk" class="contact__link">sales@openpay.co.uk</a>
+          </div>
+
+          <div class="contact__phone">
+            <div class="contact__img-wrapper">
+              <img src="./images/contact/phone.svg" alt="Phone Icon" class="contact__img">
+            </div>
+            <h3 class="contact__subtitle">Call us</h3>
+            <p class="contact__text">If you need urgent assistance, contact one of our friendly support staff to assist you.</p>
+            <a href="tel:+44 (0)20 3871 2949" class="contact__link">+44 (0)20 3871 2949</a>
+          </div>
+        </div>
       </div>
-    </div>
-    <div class="whatCanWeDo-wrap block-wap">
-      <section class="whatCanWeDo-section whatCanWeDo-section_1">
-        <h2 class="title-h2 whatCanWeDo-title">
-          What can we do for you?
-        </h2>
-        <div class="whatCanWeDo-item whatCanWeDo-item_1">
-          <img
-            src="./images/cart.svg"
-            alt="basket"
-            class="whatCanWeDo-item__icon"
-          />
-          <h4 class="title-h4 whatCanWeDo-item-title">
-            Increase basket size
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
-            By offering your customers more time to pay, they’re able to spend
-            more and plan their purchases. Use Openpay to up-sell and increase
-            your AOV.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_2">
-          <img
-            src="./images/incrise.svg"
-            alt="schedule"
-            class="whatCanWeDo-item__icon"
-          />
-          <h4 class="title-h4 whatCanWeDo-item-title">
-            Increase customer loyalty
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
-            Convert existing customers and attract new ones by offering the
-            latest and greatest in consumer shopping trends. Allowing your
-            customers the ease and convenience of paying over time will keep
-            them coming back for more.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_3">
-          <img
-            src="./images/lock.svg"
-            alt="castle"
-            class="whatCanWeDo-item__icon"
-          />
-          <h4 class="title-h4 whatCanWeDo-item-title">
-            Provide a risk free, secure solution
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
-            We assume all transactional risk, paying you in full the next
-            business day. We mirror your return policies for partial and full
-            refunds and we return our Openpay transaction fee to you.
-          </p>
-        </div>
-      </section>
-      <section class="whatCanWeDo-section whatCanWeDo-section_2">
-        <h2 class="title-h2 whatCanWeDo-title">
-          What can we do for your customers?
-        </h2>
-        <div class="whatCanWeDo-item whatCanWeDo-item_4">
-          <img
-            src="./images/shop.svg"
-            alt="basket"
-            class="whatCanWeDo-item__icon"
-          />
-          <h4 class="title-h4 whatCanWeDo-item-title">
-            A smarter way to pay.
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
-            We provide a simple way for your customers to spread their payments
-            and manage their finances responsibly without compromising on what
-            they want.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_5">
-          <img
-            src="./images/group.svg"
-            alt="community"
-            class="whatCanWeDo-item__icon"
-          />
-          <h4 class="title-h4 whatCanWeDo-item-title">
-            Open & transparent transactions
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
-            We are committed to providing our customers with clarity &
-            transparency at every stage of their journey. We won’t ever charge
-            them interest, payment or plan fees and everything is laid out
-            clearly from the beginning and throughout.
-          </p>
-        </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_6">
-          <img
-            src="./images/confirm.svg"
-            alt="handshake"
-            class="whatCanWeDo-item__icon"
-          />
-          <h4 class="title-h4 whatCanWeDo-item-title">
-            Fulfilling orders, not fantasies
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
-            Our customers always pay their first instalment at the time of
-            purchase, with payments due at dates chosen by them. Why is this
-            great? Our customers are able to truly budget, which means fewer
-            regret purchases.
-          </p>
-        </div>
-      </section>
-    </div>
-    <div class="readyToChat-wrap block-wap">
-      <div class="readyToChat block-child-wrap">
-        <h3 class="title-h3 readyToChat-title">
-          Ready to chat?
-        </h3>
-        <a
-          href="http://unbouncepages.com/openpaycontactuk/"
-          target="_blank"
-          class="btn-primary readyToChat-btn"
-        >
-          Contact Us
-        </a>
-      </div>
-    </div>
+    </section>
+
     <div class="footer-wrap block-wap">
       <footer class="footer block-child-wrap">
         <nav class="nav-footer">
           <ul class="footer-nav-list">
-            <!-- <li>
-                    <a href="/works" class="paragraphSpec-3">How it works</a>
-                </li> -->
             <li>
               <a href="/business" class="paragraphSpec-3">I’m a business</a>
             </li>
