swap position of the submit form and link to the business page in the feedback section

--- a/src/index.html
+++ b/src/index.html
@@ -166,7 +166,19 @@
 
     <div class="feedback-wrap block-wap">
       <section class="feedback">
-        <div>
+        <div class="feedback_item">
+          <h2 class="feedback_title">You’re a Business? Let’s Chat.</h2>
+          <p class="feedback_text feedback_text--height">
+            We’re in the business of offering your customers a smarter way to
+            pay. Do you need a risk-free and seamless payment solution that
+            increases sales and conversions?
+          </p>
+          <div class="feedback_btn_block">
+            <a href="/business" class="feedback_btn_block_link">Learn More</a>
+          </div>
+        </div>
+
+        <div class="feedback_item">
           <h2 class="feedback_title">Shop Smarter</h2>
           <div class="feedback__Interested">
             <p class="feedback_text">Interested? Sign up below to learn more.</p>
@@ -181,18 +193,6 @@
               </h2>
              </div>
           </form>
-          
-        </div>
-        <div>
-          <h2 class="feedback_title">You’re a Business? Let’s Chat.</h2>
-          <p class="feedback_text feedback_text--height">
-            We’re in the business of offering your customers a smarter way to
-            pay. Do you need a risk-free and seamless payment solution that
-            increases sales and conversions?
-          </p>
-          <div class="feedback_btn_block">
-            <a href="/business" class="feedback_btn_block_link">Learn More</a>
-          </div>
         </div>
       </section>
     </div>
@@ -201,9 +201,6 @@
       <footer class="footer block-child-wrap">
         <nav class="nav-footer">
           <ul class="footer-nav-list">
-            <!-- <li>
-                    <a href="/works" class="paragraphSpec-3">How it works</a>
-                </li> -->
             <li>
               <a href="/business" class="paragraphSpec-3">I’m a business</a>
             </li>
