update styles and add sign up form for the landing page

--- a/src/index.html
+++ b/src/index.html
@@ -191,7 +191,7 @@
                 Sign up
               </button>
             </div>
-            <div class="feedback_thankyou">
+            <div class="thankyou">
               <h2><em>Thank you,</em> we'll be in touch.</h2>
             </div>
           </form>
