update styles for the business page

--- a/src/business.html
+++ b/src/business.html
@@ -106,9 +106,9 @@
     </div>
     <div class="introduction-wrap block-wap">
       <div class="introduction block-child-wrap">
-        <p class="introduction-desc">
+        <h1 class="introduction-desc">
           Open your eyes to a smarter way to pay
-        </p>
+        </h1>
       </div>
     </div>
     <div class="whyOpenPay-wrap block-wap">
