--- a/src/index.html
+++ b/src/index.html
@@ -97,7 +97,7 @@
     <div class="banner-wrap block-wap">
       <div class="banner block-child-wrap">
         <div class="banner-content">
-          <h1>Welcome to a smarter way to pay.</h1>
+          <h1>Welcome to a<br>smarter way to pay.</h1>
           <img src="./images/home_logo.svg" alt="logo" class="banner_logo" />
         </div>
       </div>
