update styles and optimize images

--- a/src/contact.html
+++ b/src/contact.html
@@ -5,6 +5,7 @@
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay Contact Us</title>
+    <meta name="description" content="Openpay Welcome to a smarter way to pay">
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
@@ -110,8 +111,8 @@
               <img src="./images/contact/mail.svg" alt="Email Icon" class="contact__img contact__img--mail">
             </div>
             <h3 class="contact__subtitle contact__subtitle--mail">Email us</h3>
-            <p class="contact__text">For non-urgent and general help, contact by email. we’ll get back to you promptly.</p>
-            <a href="mailto:sales@openpay.co.uk" class="contact__link">sales@openpay.co.uk</a>
+            <p class="contact__text">For non-urgent and general help, contact by email. We’ll get back to you promptly.</p>
+            <a href="mailto:sales@myopenpay.co.uk" class="contact__link">sales@myopenpay.co.uk</a>
           </div>
 
           <div class="contact__phone">
