--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Openpay: I'm a business - Enable new audiences</title>
+    <title>Openpay: Welcome</title>
+    <meta name="description" content="Openpay Welcome to a smarter way to pay">
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
