--- a/src/business.html
+++ b/src/business.html
@@ -5,6 +5,10 @@
     <link rel="shortcut icon" type="image/png" href="./images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay I’m a business</title>
+    <meta
+      name="description"
+      content="Openpay Welcome to a smarter way to pay"
+    />
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
@@ -68,10 +72,6 @@
         g.clearUserCookie = function() {};
       })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
-    <link
-      href="https://fonts.googleapis.com/css?family=Poppins:300,600,800"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./css/business_uk.css" />
     <link rel="stylesheet" href="css/nav.css" />
   </head>
@@ -88,22 +88,17 @@
         </div>
         <nav class="header-nav header-nav_disable">
           <ul class="nav-list">
-            <!-- <li>
-              <a href="/works" class="paragraph-4">How it works</a>
-            </li> -->
             <li>
-              <a href="/business" class="paragraph-4">I'm a business</a>
+              <a href="/business" class="paragraphSpec-4">I'm a business</a>
             </li>
             <li>
-              <a href="/contact" class="paragraph-4">Contact us</a>
+              <a href="/contact" class="paragraphSpec-4">Contact us</a>
             </li>
           </ul>
-          <!-- <a href="#" class="header__log-in paragraph-4">
-            Merchant log In
-          </a> -->
         </nav>
       </header>
     </div>
+
     <div class="introduction-wrap block-wap">
       <div class="introduction block-child-wrap">
         <h1 class="introduction-desc">
@@ -111,17 +106,17 @@
         </h1>
       </div>
     </div>
+
     <div class="whyOpenPay-wrap block-wap">
-      <img src="./images/big-o.svg" alt="bg" class="whyOpenPay-bg" />
       <div class="whyOpenPay">
-        <h1 class="title-h1 whyOpenPay-title">
+        <h2 class="whyOpenPay-title">
           Why Openpay?
-        </h1>
-        <p class="paragraph-1 whyOpenPay__text">
+        </h2>
+        <p class="whyOpenPay__text">
           We’re safe, responsible and transparent. Your customers are our
           customers, and your success is our success.
         </p>
-        <p class="paragraph-1 whyOpenPay__text">
+        <p class="whyOpenPay__text">
           Made by retailers, for retailers, we have over 6000 online and
           in-store partners across Australia, New Zealand and now the UK. Our
           proven technology will help you increase sales, drive loyalty and
@@ -131,14 +126,16 @@
       <a
         href="http://unbouncepages.com/openpaycontactuk/"
         target="_blank"
+        rel="noopener"
         class="btn-primary whyOpenPay-btn"
       >
         Get in touch
       </a>
     </div>
+
     <div class="whatCanWeDo-wrap block-wap">
       <section class="whatCanWeDo-section whatCanWeDo-section_1">
-        <h2 class="title-h2 whatCanWeDo-title">
+        <h2 class="whatCanWeDo-title">
           What can we do for you?
         </h2>
         <div class="whatCanWeDo-item whatCanWeDo-item_1">
@@ -147,10 +144,10 @@
             alt="basket"
             class="whatCanWeDo-item__icon"
           />
-          <h4 class="title-h4 whatCanWeDo-item-title">
+          <h4 class="whatCanWeDo-item-title">
             Increase basket size
           </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
+          <p class="whatCanWeDo-item-paragraph">
             By offering your customers more time to pay, they’re able to spend
             more and plan their purchases. Use Openpay to up-sell and increase
             your AOV.
@@ -162,10 +159,10 @@
             alt="schedule"
             class="whatCanWeDo-item__icon"
           />
-          <h4 class="title-h4 whatCanWeDo-item-title">
+          <h3 class="whatCanWeDo-item-title">
             Increase customer loyalty
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
+          </h3>
+          <p class="whatCanWeDo-item-paragraph">
             Convert existing customers and attract new ones by offering the
             latest and greatest in consumer shopping trends. Allowing your
             customers the ease and convenience of paying over time will keep
@@ -178,10 +175,10 @@
             alt="castle"
             class="whatCanWeDo-item__icon"
           />
-          <h4 class="title-h4 whatCanWeDo-item-title">
+          <h3 class="whatCanWeDo-item-title">
             Provide a risk free, secure solution
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
+          </h3>
+          <p class="whatCanWeDo-item-paragraph">
             We assume all transactional risk, paying you in full the next
             business day. We mirror your return policies for partial and full
             refunds and we return our Openpay transaction fee to you.
@@ -189,7 +186,7 @@
         </div>
       </section>
       <section class="whatCanWeDo-section whatCanWeDo-section_2">
-        <h2 class="title-h2 whatCanWeDo-title">
+        <h2 class="whatCanWeDo-title">
           What can we do for your customers?
         </h2>
         <div class="whatCanWeDo-item whatCanWeDo-item_4">
@@ -198,10 +195,10 @@
             alt="basket"
             class="whatCanWeDo-item__icon"
           />
-          <h4 class="title-h4 whatCanWeDo-item-title">
+          <h3 class="whatCanWeDo-item-title">
             A smarter way to pay.
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
+          </h3>
+          <p class="whatCanWeDo-item-paragraph">
             We provide a simple way for your customers to spread their payments
             and manage their finances responsibly without compromising on what
             they want.
@@ -213,10 +210,10 @@
             alt="community"
             class="whatCanWeDo-item__icon"
           />
-          <h4 class="title-h4 whatCanWeDo-item-title">
+          <h3 class="whatCanWeDo-item-title">
             Open & transparent transactions
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
+          </h3>
+          <p class="whatCanWeDo-item-paragraph">
             We are committed to providing our customers with clarity &
             transparency at every stage of their journey. We won’t ever charge
             them interest, payment or plan fees and everything is laid out
@@ -229,10 +226,10 @@
             alt="handshake"
             class="whatCanWeDo-item__icon"
           />
-          <h4 class="title-h4 whatCanWeDo-item-title">
+          <h3 class="whatCanWeDo-item-title">
             Fulfilling orders, not fantasies
-          </h4>
-          <p class="paragraph-2 whatCanWeDo-item-paragraph">
+          </h3>
+          <p class="whatCanWeDo-item-paragraph">
             Our customers always pay their first instalment at the time of
             purchase, with payments due at dates chosen by them. Why is this
             great? Our customers are able to truly budget, which means fewer
@@ -241,6 +238,7 @@
         </div>
       </section>
     </div>
+
     <div class="readyToChat-wrap block-wap">
       <div class="readyToChat block-child-wrap">
         <h3 class="title-h3 readyToChat-title">
@@ -249,19 +247,18 @@
         <a
           href="http://unbouncepages.com/openpaycontactuk/"
           target="_blank"
+          rel="noopener"
           class="btn-primary readyToChat-btn"
         >
           Get in touch
         </a>
       </div>
     </div>
+
     <div class="footer-wrap block-wap">
       <footer class="footer block-child-wrap">
         <nav class="nav-footer">
           <ul class="footer-nav-list">
-            <!-- <li>
-                    <a href="/works" class="paragraphSpec-3">How it works</a>
-                </li> -->
             <li>
               <a href="/business" class="paragraphSpec-3">I’m a business</a>
             </li>
