refactor business page

--- a/src/business.html
+++ b/src/business.html
@@ -186,8 +186,8 @@
         </div>
       </section>
       <section class="whatCanWeDo-section whatCanWeDo-section_2">
-        <h2 class="whatCanWeDo-title">
-          What can we do for your customers?
+        <h2 class="whatCanWeDo-title whatCanWeDo-title--row">
+          What can we do for your<br>customers?
         </h2>
         <div class="whatCanWeDo-item whatCanWeDo-item_4">
           <img
