fix styles and optimize landing page hero image

--- a/src/business.html
+++ b/src/business.html
@@ -138,7 +138,7 @@
         <h2 class="whatCanWeDo-title">
           What can we do for you?
         </h2>
-        <div class="whatCanWeDo-item whatCanWeDo-item_1">
+        <div class="whatCanWeDo-item">
           <img
             src="./images/cart.svg"
             alt="basket"
@@ -153,7 +153,7 @@
             your AOV.
           </p>
         </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_2">
+        <div class="whatCanWeDo-item">
           <img
             src="./images/incrise.svg"
             alt="schedule"
@@ -169,7 +169,7 @@
             them coming back for more.
           </p>
         </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_3">
+        <div class="whatCanWeDo-item">
           <img
             src="./images/lock.svg"
             alt="castle"
@@ -189,7 +189,7 @@
         <h2 class="whatCanWeDo-title whatCanWeDo-title--row">
           What can we do for your<br>customers?
         </h2>
-        <div class="whatCanWeDo-item whatCanWeDo-item_4">
+        <div class="whatCanWeDo-item">
           <img
             src="./images/shop.svg"
             alt="basket"
@@ -204,7 +204,7 @@
             they want.
           </p>
         </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_5">
+        <div class="whatCanWeDo-item">
           <img
             src="./images/group.svg"
             alt="community"
@@ -220,7 +220,7 @@
             clearly from the beginning and throughout.
           </p>
         </div>
-        <div class="whatCanWeDo-item whatCanWeDo-item_6">
+        <div class="whatCanWeDo-item whatCanWeDo-item--last">
           <img
             src="./images/confirm.svg"
             alt="handshake"
