--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,6 @@
       })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
     <link rel="stylesheet" href="./css/home_uk.css" />
-    <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
     <div class="header-wrap block-wap">
@@ -129,7 +128,7 @@
     <div class="howItWorks block-wap">
       <div class="block-child-wrap">
         <section class="howItWorks-content">
-          <h2>How Openpay works</h2>
+          <h2 class="howItWorks-title">How Openpay works</h2>
           <div class="block_howItWorks_flex">
             <div class="block_howItWorks">
               <img src="images/cup.svg" alt="Cup Icon" />
@@ -137,7 +136,7 @@
               <p class="block_howItWorks_text">
                 Sign up in less than 90 seconds with a few simple details.
               </p>
-            </div>
+            </div> 
             <div class="block_howItWorks">
               <img src="images/sneakers.svg" alt="Sneakers Icon"/>
               <h3 class="block_howItWorks_title">Shop Now</h3>
@@ -237,14 +236,14 @@
       </footer>
     </div>
 
-    <script src="./scripts/main.js"></script>
+    <script defer src="./scripts/main.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script
       data-cfasync="false"
       type="text/javascript"
-      src="./scripts/form-submission-handler.js"
+      src="./scripts/form-submission-handler.min.js"
     ></script>
   </body>
 </html>
