--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -70,7 +70,6 @@
       })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
     <link rel="stylesheet" href="css/landingpage.css" />
-    <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
     <div class="welcome-wrap block-wap">
@@ -251,7 +250,6 @@
       </div>
     </div>
 
-    <script src="./scripts/main.js"></script>
     <!-- Google Tag Manager (noscript) -->
     <noscript
       ><iframe
@@ -262,12 +260,12 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
     <script
       data-cfasync="false"
       type="text/javascript"
-      src="./scripts/form-submission-handler.js"
+      src="./scripts/form-submission-handler.min.js"
     ></script>
   </body>
 </html>
