--- a/src/business.html
+++ b/src/business.html
@@ -73,7 +73,6 @@
       })(window, document, window['_fs_namespace'], 'script', 'user');
     </script>
     <link rel="stylesheet" href="./css/business_uk.css" />
-    <link rel="stylesheet" href="css/nav.css" />
   </head>
   <body>
     <div class="header-wrap block-wap">
@@ -290,8 +289,8 @@
       </footer>
     </div>
 
-    <script src="./scripts/main.js"></script>
+    <script defer src="./scripts/main.min.js"></script>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   </body>
 </html>
