add hover effects and link on the footer's logo

--- a/src/contact.html
+++ b/src/contact.html
@@ -144,7 +144,9 @@
             </li>
           </ul>
         </nav>
-        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+        <a href="/">
+          <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+        </a>
         <p class="copyright">
           © Openpay | Made in Melbourne
         </p>
