--- a/src/index.html
+++ b/src/index.html
@@ -184,9 +184,11 @@
           >
             <div class="form-elements">
               <input
+                class="feedback_input"
                 type="email"
                 name="email"
                 placeholder="Your email address"
+                maxlength="254"
                 required
               />
               <button class="feedback_btn_block_link" type="submit">
@@ -229,7 +231,9 @@
             </li>
           </ul>
         </nav>
-        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+        <a href="/">
+          <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+        </a>
         <p class="copyright">
           © Openpay | Made in Melbourne
         </p>
