--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -105,6 +105,7 @@
                 type="email"
                 name="email"
                 placeholder="Your email address"
+                maxlength="254"
                 required
               />
               <button class="signup__submit" type="submit">
