--- a/src/business.html
+++ b/src/business.html
@@ -282,7 +282,9 @@
             </li>
           </ul>
         </nav>
-        <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+        <a href="/">
+          <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+        </a>
         <p class="copyright">
           © Openpay | Made in Melbourne
         </p>
