add cookies popup

--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -261,7 +261,16 @@
       ></iframe
     ></noscript>
     <!-- End Google Tag Manager (noscript) -->
+    <div class="cookie-popup">
+      We uses cookies to give you the best browsing experience.  <a href="./docs/privacy-policy.pdf" class="cookie-popup__link" target="_blank">Find out more</a> or adjust your settings.
+      <button class="cookie-popup__button">Accept</button>
+    </div>
+
     <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+
+    <script defer src="./scripts/main.min.js"></script>
 
     <script
       data-cfasync="false"
