--- a/src/business.html
+++ b/src/business.html
@@ -213,7 +213,7 @@
             Open & transparent transactions
           </h3>
           <p class="whatCanWeDo-item-paragraph">
-            We are committed to providing our customers with clarity &
+            We are committed to providing your customers with clarity &
             transparency at every stage of their journey. We won’t ever charge
             them interest, payment or plan fees and everything is laid out
             clearly from the beginning and throughout.
@@ -229,9 +229,9 @@
             Fulfilling orders, not fantasies
           </h3>
           <p class="whatCanWeDo-item-paragraph">
-            Our customers always pay their first instalment at the time of
+            Your customers always pay their first instalment at the time of
             purchase, with payments due at dates chosen by them. Why is this
-            great? Our customers are able to truly budget, which means fewer
+            great? Your customers are able to truly budget, which means fewer
             regret purchases.
           </p>
         </div>
