--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
     <div class="banner-wrap block-wap">
       <div class="banner block-child-wrap">
         <div class="banner-content">
-          <h1>Welcome to a<br>smarter way to pay.</h1>
+          <h1>Welcome to a<br>smarter way to pay</h1>
           <img src="./images/home_logo.svg" alt="logo" class="banner_logo" />
         </div>
       </div>
@@ -108,7 +108,7 @@
       <section class="forWhomItWorks">
         <div class="forWhomItWorks_wrapper">
           <div class="forWhomItWorks_desc">
-            <h2>Get what you want,<br />pay on your own terms.</h2>
+            <h2>Get what you want,<br />pay on your own terms</h2>
             <p class="forWhomItWorks_subtitle">
               Working for Australian consumers and retailers since 2012, Openpay
               has now landed in the UK.
@@ -159,7 +159,7 @@
     <div class="feedback-wrap block-wap">
       <section class="feedback block-child-wrap">
         <div class="feedback_item">
-          <h2 class="feedback_title">You’re a Business? Let’s Chat.</h2>
+          <h2 class="feedback_title">You’re a Business? Let’s Chat</h2>
           <p class="feedback_text feedback_text--height">
             We’re in the business of offering your customers a smarter way to
             pay. Do you need a risk-free and seamless payment solution that
