--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -173,7 +173,7 @@
       <div class="empoweringPay">
         <section class="empoweringPay-section">
           <h2 class="title-h2 empoweringPay-title">
-            Empowering you to pay.
+            Empowering you to pay
           </h2>
           <article class="empoweringPay__article">
             <h4 class="empoweringPay__article-title">
