--- a/src/contact.html
+++ b/src/contact.html
@@ -110,7 +110,7 @@
               <img src="./images/contact/mail.svg" alt="Email Icon" class="contact__img contact__img--mail">
             </div>
             <h3 class="contact__subtitle contact__subtitle--mail">Email us</h3>
-            <p class="contact__text">For non-urgent and general help, contact by email. We’ll get back to you promptly.</p>
+            <p class="contact__text">For non-urgent and general help, contact us by email and we’ll get back to you promptly.</p>
             <a href="mailto:sales@myopenpay.co.uk" class="contact__link">sales@myopenpay.co.uk</a>
           </div>
 
