change background images and styles according to a new design

--- a/src/business.html
+++ b/src/business.html
@@ -104,7 +104,7 @@
     <div class="introduction-wrap block-wap">
       <div class="introduction block-child-wrap">
         <h1 class="introduction-desc">
-          Open your eyes to a smarter way to pay
+          Open your eyes to a<br>smarter way to pay
         </h1>
       </div>
     </div>
