--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -77,19 +77,18 @@
   <body>
     <div class="welcome-wrap block-wap">
       <div class="welcome block-child-wrap">
-        <img src="./images/landing_logo.svg" alt="Openpay" class="logo" />
         <h1 class="welcome-title">
-          Welcome to a smarter way to pay
+          Welcome to a<br>smarter way to pay
         </h1>
+        <img src="./images/landing_logo.svg" alt="Openpay" class="welcome-logo" />
       </div>
     </div>
 
     <section class="signup">
-      <div class="signup__wrapper">
+      <div class="signup__wrapper block-child-wrap">
         <div class="signup__item">
           <h2 class="signup__title">
-            We’ve partnered with Openpay to bring you more ways to pay, on your
-            terms.
+            We’ve partnered with Openpay to bring you more ways to pay, <div class="signup__subtitle">on your terms.</div>
           </h2>
         </div>
         <div class="signup__item signup__item--form">
@@ -136,7 +135,7 @@
               class="work-item__icon work-item__icon_1"
             />
             <h3 class="work-item__title">
-              Sign Up
+              Sign up
             </h3>
             <p class="work-item__desc">
               Sign up in less than 90 seconds with a few simple details.
@@ -149,7 +148,7 @@
               class="work-item__icon work-item__icon_2"
             />
             <h3 class="work-item__title">
-              Shop Now
+              Shop now
             </h3>
             <p class="work-item__desc">
               Add items to the basket, and select Openpay at checkout
@@ -162,7 +161,7 @@
               class="work-item__icon work-item__icon_3"
             />
             <h3 class="work-item__title">
-              Pay Smarter
+              Pay smarter
             </h3>
             <p class="work-item__desc">
               Pay your plan off in equal, monthly instalments, starting today.
