--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay Welcome</title>
     <meta name="description" content="Openpay Welcome to a smarter way to pay">
+    <meta property="og:image" content="http://www.myopenpay.co.uk/images/opengraph/opengraph-home.jpg">
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
