--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Openpay: Welcome</title>
     <meta name="description" content="Openpay Welcome to a smarter way to pay">
+    <meta property="og:image" content="http://www.myopenpay.co.uk/images/opengraph/opengraph-landingpage.jpg">
     <!-- Google Tag Manager -->
     <script>
       (function(w, d, s, l, i) {
@@ -272,7 +273,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
 
-    <script defer src="./scripts/main.min.js"></script>
+    <script defer src="./scripts/landing-main.min.js"></script>
 
     <script
       data-cfasync="false"
