--- a/src/index.html
+++ b/src/index.html
@@ -176,9 +176,9 @@
         <div class="feedback_item">
           <h2 class="feedback_title">Shop smarter</h2>
           <div class="feedback__Interested">
-            <p class="feedback_text">
+            <label class="feedback_text feedback_text--signup" for="signup">
               Interested? Sign up below to learn more.
-            </p>
+            </label>
           </div>
           <form
             class="gform feedback_form"
@@ -187,6 +187,7 @@
           >
             <div class="form-elements">
               <input
+                id="signup"
                 class="feedback_input"
                 type="email"
                 name="email"
