--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -93,10 +93,9 @@
           </h2>
         </div>
         <div class="signup__item signup__item--form">
-          <h3 class="signup__form-title">
-            Add your email address to receive the latest news and info from
-            Openpay
-          </h3>
+          <label class="signup__form-title" for="signup">
+            Add your email address to receive the latest news and info from Openpay
+          </label>
           <form
             class="gform signup__form"
             method="POST"
@@ -104,6 +103,7 @@
           >
             <div class="form-elements">
               <input
+                id="signup"
                 class="signup__input"
                 type="email"
                 name="email"
