update img alt's

--- a/src/business.html
+++ b/src/business.html
@@ -82,7 +82,7 @@
       <header class="header block-child-wrap">
         <div class="header-logo-and-trigger">
           <a href="/" class="logo-link">
-            <img src="./images/logo-black.svg" alt="Openpay" class="logo" />
+            <img src="./images/logo-black.svg" alt="Openpay Logo" class="logo" />
           </a>
           <div class="trigger-menu">
             <div class="trigger-menu__line"></div>
@@ -286,7 +286,7 @@
           </ul>
         </nav>
         <a href="/">
-          <img src="./images/logo-footer.svg" alt="logo" class="footer-logo" />
+          <img src="./images/logo-footer.svg" alt="Openpay Logo" class="footer-logo" />
         </a>
         <p class="copyright">
           © Openpay | Made in Melbourne
