--- a/src/landingpage.html
+++ b/src/landingpage.html
@@ -81,7 +81,7 @@
         <h1 class="welcome-title">
           Welcome to a<br>smarter way to pay
         </h1>
-        <img src="./images/landing_logo.svg" alt="Openpay" class="welcome-logo" />
+        <img src="./images/landing_logo.svg" alt="Openpay Logo" class="welcome-logo" />
       </div>
     </div>
 
